--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,7 +1,7 @@
 #labels Featured
 = Version 0.1 =
   * ライセンスをGPLに変更
-  * 更新チャック機能を追加
+  * 更新チェック機能を追加
   * 休日表示機能を追加
   * AM00:00に表示を更新するように変更
 (2008/05/25)
